buy a book link

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -3,5 +3,5 @@ contact_links:
     url: https://github.com/orgs/community/discussions
     about: Please ask and answer questions here.
   - name: GitHub Security Bug Bounty
-    url: https://bounty.github.com/
-    about: Please report security vulnerabilities here.
+    url: https://donhuvy.com/
+    about: Buy a book from Vy.
